# ethereum-rust

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  genesis.json  start.sh
.github/workflows/: ci.yml  release.yml  security.yml
audits/: security-audit-checklist.md
benches/: performance_benchmark.rs
config/: default.toml
crates/account/: Cargo.toml
crates/account-abstraction/: Cargo.toml
crates/account-abstraction/src/: ai_simulator.rs  lib.rs  quantum_signatures.rs
crates/account/src/: keystore.rs  lib.rs  signer.rs  wallet.rs
crates/ai-security/: Cargo.toml
crates/consensus/: Cargo.toml
crates/consensus/src/: clique.rs  eip7002.rs  eip7251.rs  engine.rs  fork_choice.rs  lib.rs  pos.rs  validator.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  eip7691.rs  eip7702.rs  lib.rs  transaction.rs
crates/cross-chain/: Cargo.toml
crates/crypto/: Cargo.toml
crates/crypto-advanced/: Cargo.toml
crates/crypto-advanced/src/: bls.rs  kzg.rs  lib.rs  precompiles.rs
crates/crypto-advanced/trusted_setup/: mainnet.txt
crates/crypto/src/: lib.rs  secp256k1_crypto.rs
crates/das/: Cargo.toml
crates/das/src/: distribution.rs  erasure.rs  lib.rs  peer_das.rs  reconstruction.rs  sampling.rs
crates/debug/: Cargo.toml
crates/debug/src/: debugger.rs  lib.rs  profiler.rs  state_diff.rs  tracer.rs
crates/engine/: Cargo.toml
crates/engine/src/: api.rs  auth.rs  builder.rs  forkchoice.rs  lib.rs  payload.rs  types.rs
crates/evm/: Cargo.toml
crates/evm-jit/: Cargo.toml
crates/evm-jit/src/: lib.rs
crates/evm/src/: error.rs  execution.rs  gas.rs  interpreter.rs  lib.rs  memory.rs  opcodes.rs  precompiled.rs  stack.rs  state.rs  tests.rs
crates/filter/: Cargo.toml
crates/filter/src/: block_filter.rs  lib.rs  log_filter.rs  pending_tx_filter.rs  subscription.rs
crates/history-expiry/: Cargo.toml
crates/history-expiry/src/: archival.rs  expiry_manager.rs  lib.rs  portal_integration.rs  pruning.rs  retrieval.rs
crates/mev/: Cargo.toml
crates/mev/src/: auction.rs  builder.rs  bundle.rs  flashbots.rs  lib.rs  proposer.rs  relay.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: alerts.rs  collector.rs  health.rs  lib.rs  metrics.rs  server.rs
crates/network/: Cargo.toml
crates/network/src/: discovery.rs  discovery_v5.rs  lib.rs  messages.rs  peer.rs  protocol.rs  rlpx.rs
crates/parallel-execution/: Cargo.toml
crates/parallel-execution/src/: conflict_detector.rs  dependency_graph.rs  executor.rs  lib.rs  scheduler.rs  state_manager.rs  validator.rs
crates/rlp/: Cargo.toml
crates/rlp/src/: decode.rs  encode.rs  error.rs  lib.rs  traits.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: eth.rs  lib.rs  methods.rs  net.rs  server.rs  types.rs  web3.rs
crates/ssf/: Cargo.toml
crates/ssf/src/: aggregator.rs  committee.rs  finality.rs  lib.rs  signature_aggregation.rs  validator.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  memory.rs  rocksdb.rs  traits.rs
crates/sync/: Cargo.toml
crates/sync/src/: beacon_sync.rs  block_downloader.rs  fast_sync.rs  lib.rs  snap_sync.rs  state_sync.rs
crates/trie/: Cargo.toml
crates/trie/src/: lib.rs  nibbles.rs  node.rs  proof.rs  trie.rs
crates/txpool/: Cargo.toml
crates/txpool/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: address.rs  bloom.rs  bytes.rs  hash.rs  lib.rs  uint.rs
crates/verification/: Cargo.toml
crates/verification/src/: block.rs  header.rs  lib.rs  state.rs  transaction.rs
crates/verkle/: Cargo.toml
crates/verkle/src/: commitment.rs  lib.rs  migration.rs  node.rs  proof.rs  tree.rs  witness.rs
crates/zkevm/: Cargo.toml
crates/zkml/: Cargo.toml
crates/zkml/src/: circuits.rs  lib.rs  marketplace.rs  model.rs  oracle.rs  prover.rs  verifier.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md
monitoring/: prometheus.yml
monitoring/alerts/: alerts.yml
monitoring/grafana/dashboards/: ethereum-rust.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: deploy-testnet.sh  disaster-recovery.sh
src/: config.rs  genesis.rs  lib.rs  main.rs  node.rs
tests/: e2e_test.rs  integration_test.rs  load_test.rs  monitor_test.rs
