[package]
name = "ethereum-rust"
version = "0.1.0"
edition = "2021"
authors = ["Ethereum Rust Contributors"]
license = "MIT OR Apache-2.0"
description = "A complete Ethereum implementation in Rust"
repository = "https://github.com/ethereum-rust/ethereum-rust"
keywords = ["ethereum", "blockchain", "cryptocurrency", "web3"]
categories = ["cryptography::cryptocurrencies"]

[workspace]
members = [
    "crates/core",
    "crates/consensus", 
    "crates/network",
    "crates/storage",
    "crates/rpc",
    "crates/crypto",
    "crates/types",
    "crates/rlp",
    "crates/evm",
]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Configuration
config = "0.13"
directories = "5.0"

# Metrics
prometheus = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
