[package]
name = "ethereum-rust"
version = "0.1.0"
edition = "2021"
authors = ["Ethereum Rust Contributors"]
license = "MIT OR Apache-2.0"
description = "A complete Ethereum implementation in Rust"
repository = "https://github.com/ethereum-rust/ethereum-rust"
keywords = ["ethereum", "blockchain", "cryptocurrency", "web3"]
categories = ["cryptography::cryptocurrencies"]

[workspace]
members = [
    "crates/core",
    "crates/consensus", 
    "crates/network",
    "crates/storage",
    "crates/rpc",
    "crates/crypto",
    "crates/crypto-advanced",
    "crates/types",
    "crates/rlp",
    "crates/evm",
    "crates/engine",
    "crates/mev",
    "crates/trie",
    "crates/txpool",
    "crates/sync",
    "crates/verification",
    "crates/filter",
    "crates/debug",
    "crates/account",
    "crates/monitor",
    "crates/das",
    "crates/verkle",
]

[dependencies]
# Workspace crates
ethereum-core = { path = "crates/core" }
ethereum-storage = { path = "crates/storage" }
ethereum-rpc = { path = "crates/rpc" }
ethereum-network = { path = "crates/network" }
ethereum-crypto = { path = "crates/crypto" }
ethereum-types = { path = "crates/types" }
ethereum-consensus = { path = "crates/consensus" }
ethereum-evm = { path = "crates/evm" }
ethereum-trie = { path = "crates/trie" }
ethereum-txpool = { path = "crates/txpool" }
ethereum-sync = { path = "crates/sync" }
ethereum-verification = { path = "crates/verification" }
ethereum-filter = { path = "crates/filter" }
ethereum-debug = { path = "crates/debug" }
ethereum-account = { path = "crates/account" }
ethereum-monitor = { path = "crates/monitor" }
ethereum-engine = { path = "crates/engine" }
ethereum-crypto-advanced = { path = "crates/crypto-advanced" }
ethereum-mev = { path = "crates/mev" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Configuration
config = "0.13"
directories = "5.0"

# Metrics
prometheus = "0.13"

# Crypto
secp256k1 = { version = "0.27", features = ["rand"] }
rand = "0.8"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
