[package]
name = "ethereum-account-abstraction"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-crypto = { path = "../crypto" }
ethereum-evm = { path = "../evm" }
ethereum-zkml = { path = "../zkml" }

# Account abstraction
ethers = "2.0"
alloy-primitives = "0.8"
alloy-sol-types = "0.8"

# AI/ML for transaction simulation
candle-core = "0.3"
ort = "2.0"  # ONNX Runtime

# Quantum-resistant cryptography
pqcrypto = "0.16"
pqcrypto-dilithium = "0.5"
pqcrypto-falcon = "0.3"
pqcrypto-sphincsplus = "0.7"

# Biometric authentication
webauthn-rs = "0.5"
passkey = "0.3"

# Session keys
jwt = "0.16"
jsonwebtoken = "9.3"

# Storage
sled = "0.34"
rocksdb = "0.22"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"