[package]
name = "ethereum-account"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-crypto = { path = "../crypto" }
ethereum-core = { path = "../core" }

# Crypto
secp256k1 = { version = "0.27", features = ["rand"] }
sha2 = "0.10"
sha3 = "0.10"
scrypt = { version = "0.11", default-features = false }
aes = "0.8"
ctr = "0.9"
pbkdf2 = "0.12"
hmac = "0.12"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# HD wallet support
bip39 = "2.0"
bip32 = "0.5"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# File system
directories = "5.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"