[package]
name = "ethereum-cross-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-crypto = { path = "../crypto" }
ethereum-crypto-advanced = { path = "../crypto-advanced" }
ethereum-zkml = { path = "../zkml" }

# Zero-knowledge proofs for cross-chain
ark-groth16 = "0.4"
ark-crypto-primitives = "0.4"
risc0-zkvm = "1.0"
sp1-sdk = "1.0"

# Cross-chain messaging
ibc = "0.50"
cosmos-sdk-proto = "0.21"
tendermint-proto = "0.35"

# Shared sequencers
astria-core = "0.1"
sovereign-sdk = "0.1"

# Light clients
ethereum-light-client = "0.1"
bitcoin-light-client = "0.1"
cosmos-light-client = "0.1"

# Storage proofs
eth-trie = "0.1"
sparse-merkle-tree = "0.3"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Networking
libp2p = "0.53"
quinn = "0.11"  # QUIC protocol

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
prost = "0.12"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"