[package]
name = "ethereum-crypto-advanced"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-crypto = { path = "../crypto" }

# BLS12-381 curve operations
blst = "0.3"
bls12_381 = "0.8"
group = "0.13"
ff = "0.13"
pairing = "0.23"

# KZG commitments
kzg = "0.2"
c-kzg = "1.0"

# Utilities
hex = "0.4"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "bls_benchmarks"
harness = false