[package]
name = "ethereum-das"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-crypto = { path = "../crypto" }
ethereum-crypto-advanced = { path = "../crypto-advanced" }
ethereum-network = { path = "../network" }

# KZG and polynomial commitments
kzg = "0.2"
c-kzg = "1.0"
ark-poly = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-bls12-381 = "0.4"

# Reed-Solomon erasure coding
reed-solomon-erasure = "6.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Data structures
bitvec = "1.0"
bytes = "1.5"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dependencies.rand]
version = "0.8"

[dev-dependencies]
criterion = "0.5"