[package]
name = "ethereum-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-consensus = { path = "../consensus" }
ethereum-storage = { path = "../storage" }
ethereum-evm = { path = "../evm" }
ethereum-txpool = { path = "../txpool" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# JSON-RPC
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT authentication
jsonwebtoken = "9.3"
base64 = "0.22"
rand = "0.8"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
hex = "0.4"