[package]
name = "ethereum-evm-jit"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-evm = { path = "../evm" }

# JIT compilation
cranelift = "0.110"
cranelift-module = "0.110"
cranelift-jit = "0.110"
cranelift-codegen = "0.110"
wasmtime = "24.0"

# LLVM backend (optional)
inkwell = { version = "0.5", optional = true }

# Memory management
region = "3.0"
memmap2 = "0.9"

# Caching
lru = "0.12"
dashmap = "6.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Utils
bytes = "1.5"
hex = "0.4"

[features]
default = ["cranelift-backend"]
cranelift-backend = []
llvm-backend = ["inkwell"]
wasm-backend = []

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"