[package]
name = "ethereum-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-storage = { path = "../storage" }
ethereum-crypto = { path = "../crypto" }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
parking_lot = "0.12"
hex = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"