[package]
name = "ethereum-history-expiry"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-storage = { path = "../storage" }

# Storage backends
rocksdb = "0.22"
sled = "0.34"
parquet = "52.0"  # For archival storage
arrow = "52.0"

# Compression
zstd = "0.13"
lz4 = "1.24"
snap = "1.1"

# Portal Network integration
portal-network = "0.1"
discv5 = "0.7"

# IPFS/Arweave for permanent storage
ipfs-api = "0.17"
arweave-rs = "0.1"

# Torrent for P2P history sharing
libtorrent = "0.1"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Scheduling
cron = "0.12"
tokio-cron-scheduler = "0.10"

# Metrics
prometheus = "0.13"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"