[package]
name = "ethereum-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-network = { path = "../network" }
ethereum-txpool = { path = "../txpool" }
ethereum-sync = { path = "../sync" }
ethereum-storage = { path = "../storage" }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# System info
sysinfo = "0.30"
psutil = { version = "3.2", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Time
chrono = "0.4"

[features]
default = []
extended-metrics = ["psutil"]