[package]
name = "ethereum-network"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-rlp = { path = "../rlp" }
ethereum-crypto = { path = "../crypto" }
ethereum-core = { path = "../core" }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
secp256k1 = { version = "0.27", features = ["rand", "recovery"] }
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
bytes = "1.5"
tracing = "0.1"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
