[package]
name = "ethereum-types"
version = "0.1.0"
edition = "2021"
authors = ["Ethereum Rust Contributors"]
license = "MIT OR Apache-2.0"
description = "Core types for Ethereum Rust implementation"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

# Big integers
primitive-types = { version = "0.12", features = ["serde"] }

# Hashing
sha3 = "0.10"

# Error handling
thiserror = "1.0"

# Random for testing
rand = "0.8"

[dev-dependencies]
proptest = "1.4"
serde_json = "1.0"