[package]
name = "ethereum-verkle"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-crypto = { path = "../crypto" }

# Verkle tree primitives
verkle-trie = "0.1"
banderwagon = "0.1"
ipa-multipoint = "0.1"

# Polynomial commitments
ark-poly = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"

# Storage
rocksdb = "0.22"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Utils
bytes = "1.5"
hex = "0.4"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"