[package]
name = "ethereum-zkevm"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-evm = { path = "../evm" }
ethereum-crypto-advanced = { path = "../crypto-advanced" }

# zkEVM implementations
zkevm-circuits = "0.1"
halo2-base = "0.4"
halo2-ecc = "0.4"
plonky2-evm = "0.2"

# Polygon zkEVM compatibility
polygon-zkevm-prover = "0.1"
polygon-zkevm-node = "0.1"

# Scroll zkEVM compatibility
scroll-prover = "0.1"
scroll-zkevm = "0.1"

# Taiko zkEVM compatibility
taiko-zkevm = "0.1"

# Zero-knowledge proofs
ark-ff = "0.4"
ark-poly = "0.4"
ark-groth16 = "0.4"
nova-snark = "0.35"
bulletproofs = "4.0"

# GPU acceleration
cuda-sys = { version = "0.2", optional = true }
opencl3 = { version = "0.9", optional = true }
metal = { version = "0.27", optional = true }

# Home proving optimization
snarkvm = "0.16"
winterfell = "0.7"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Metrics
prometheus = "0.13"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[features]
default = ["cpu"]
cpu = []
cuda = ["cuda-sys"]
opencl = ["opencl3"]
metal = ["metal"]
home-proving = []  # Enable home proving optimizations

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"