[package]
name = "ethereum-zkml"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-types = { path = "../types" }
ethereum-core = { path = "../core" }
ethereum-crypto = { path = "../crypto" }

# Zero-knowledge proofs
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-groth16 = "0.4"
ark-marlin = "0.4"
ark-crypto-primitives = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
plonky2 = "0.2"
halo2_proofs = "0.3"

# Machine learning
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
ort = "2.0"  # ONNX Runtime
tch = "0.14" # PyTorch bindings

# GPU acceleration
cuda-sys = { version = "0.2", optional = true }
opencl3 = { version = "0.9", optional = true }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

[features]
default = ["cpu"]
cpu = []
cuda = ["cuda-sys"]
opencl = ["opencl3"]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"